Revert "Merge branch 'pandoc-filters-via-nix'"
This reverts commit 74b14c4774025b93203d59dcc1df0415f890c248, reversing
changes made to 0462252a4c1e491814b8aabcd7832f8c8545c395.

--- a/template/latex/hs-furtwangen/Makefile
+++ b/template/latex/hs-furtwangen/Makefile
@@ -11,4 +11,4 @@ pdf:
 		--variable lot=true			\
 		--variable lof=true			\
 		--variable lol=true			\
-		$(SRC) -t json | $(PANDOC_FILTERS_AND_OUT) -o $(OUT_LATEX_DEFAULT)
+		$(SRC) -o $(OUT_LATEX_DEFAULT)
