--- a/template/latex/asme/one-column/Makefile
+++ b/template/latex/asme/one-column/Makefile
@@ -11,5 +11,5 @@ pdf:
 		--variable documentclass=$(DOCUMENT_CLASS)		\
 		--variable fontsize=$(SETTING_FONTSIZE)			\
 		--template ./template.latex 					\
-		$(SRC) -t json | $(PANDOC_FILTERS_AND_OUT) -o $(OUT_LATEX_DEFAULT)
+		$(SRC) -o $(OUT_LATEX_DEFAULT)
 
