--- a/template/latex/default/Makefile
+++ b/template/latex/default/Makefile
@@ -7,4 +7,4 @@ pdf:
 	@$(ECHO) "\t[PANDOC] default"
 	@$(PANDOC_CC_PDF) 				\
 		--template ./template.latex \
-		$(SRC) -t json | $(PANDOC_FILTERS_AND_OUT) -o $(OUT_LATEX_DEFAULT)
+		$(SRC) -o $(OUT_LATEX_DEFAULT)
